# advent-of-code-2024

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci-linter.yml
aoc2024/: __main__.py  helpers.py
aoc2024/day1/: duck.py  solution.py
aoc2024/day2/: duck.py  solution.py
aoc2024/day3/: duck.py  solution.py
aoc2024/day4/: duck.py  solution.py
aoc2024/day5/: duck.py  solution.py
aoc2024/day6/: solution.py
