[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Ioannis Foukarakis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-bugbear = "^24.10.31"
flake8-comprehensions = "^3.16.0"
flake8-simplify = "^0.21.0"
flake8-eradicate = "^1.5.0"


[tool.poetry.scripts]
aoc2024 = "aoc2024.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true

[tool.isort]
append_only = true
line_length = 120
combine_as_imports = true
default_section = "THIRDPARTY"
skip = ["build", "k8s", "load", "transform", ".tox", ".venv", ".venv-airflow"]
skip_glob = ["*.pyi"]
profile = "black"